--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <color name ="my_primary">#FFD70C</color>
+    <color name ="my_secondary">#8064FA</color>
+    <color name ="my_statusbar">#F63EF6</color>
+    <color name ="my_secondaryTrait">#563BE1</color>
+
+    <color name ="my_primarydark">#E8CD43</color>
+    <color name ="my_secondarydark">#6C55D1</color>
+    <color name ="my_statusbardark">#C360C3</color>
+    <color name ="my_secondaryTraitdark">#402CA6</color>
+
+    <color name ="my_text">#FFBF00</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
